# sdl3-teste

./: CMakeLists.txt  README.md
src/: main.c
